--- a/templates/home.templ
+++ b/templates/home.templ
@@ -12,5 +12,6 @@ templ Home(data models.PageData) {
         Skills(data.Skills),
         Projects(data.Projects),
         Blogs(data.Blogs),
+        Contact(),
     )
 }
