Added resume and work experience

--- a/templates/home.templ
+++ b/templates/home.templ
@@ -10,6 +10,7 @@ templ Home(data models.PageData) {
         Banner(),
         Profile(),
         Skills(data.Skills),
+        Experience(),
         Projects(data.Projects),
         Blogs(data.Blogs),
         Contact(),
